# MyEngine

./: .clang-format  .gitignore  CMakeLists.txt  condaenv.yml  format.sh  setup.sh
assets/: fragment.glsl  vertex.glsl
cmake/: CPM.cmake  Deps.cmake  deps.cmake
include/: camera.hh  interface.hh  material.hh  mesh.hh  model.hh  object.hh  scene.hh  shader.hh  transform.hh  utils.hh  vertex.hh  window.hh
include/glad/: glad.h
include/render/: camera.hh  interface.hh  material.hh  mesh.hh  object.hh  scene.hh  shader.hh  stbi_load.hh  window.hh
src/: camera.cc  glad.cc  interface.cc  main.cc  main.cpp  material.cc  material.hh  mesh.cc  model.cc  object.cc  scene.cc  shader.cc  transform.cc  window.cc
src/commands/: arg.cc  arg.hh  command.cc  command.hh  command_manager.cc  command_manager.hh  orient.cc  orient.hh  select.cc  select.hh
src/interface/: console.cc  console.hh  interface.cc  interface.hh
src/render/: bounds.cc  bounds.hh  camera.cc  camera.hh  glad.cc  interface.cc  main.cc  material.cc  material.hh  mesh.cc  mesh.hh  model.cc  model.hh  object.cc  object.hh  scene.cc  scene.hh  shader.cc  shader.hh  transform.cc  transform.hh  window.cc  window.hh
